Fix erronous nav shadow on small breakpoints

--- a/src/assets/sass/modules/_responsive.scss
+++ b/src/assets/sass/modules/_responsive.scss
@@ -367,6 +367,14 @@
         }
     }
 
+    @if $flat-theme < 1 {
+        @include dark-mode {
+            .dropdown-menu {
+                box-shadow: none;
+            }
+        }
+    }
+
     /**
      * Collapse 2 column form fields to 1 column (remove flexbox).
      */
